[package]
name = "java_parser"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]

[build-dependencies]
lrlex = {path="../grmtools/lrlex"}
lrpar = {path="../grmtools/lrpar"}

[dependencies]
lrlex = {path="../grmtools/lrlex"}
lrpar = {path="../grmtools/lrpar"}

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
