[package]
name = "java_parser"
version = "0.1.0"
authors = ["Laurence Tratt <laurie@tratt.net>"]
edition = "2018"

[build-dependencies]
cfgrammar = { path = "../grmtools/cfgrammar" }
lrlex = { path = "../grmtools/lrlex" }
lrpar = { path = "../grmtools/lrpar" }

[dependencies]
cfgrammar = { path = "../grmtools/cfgrammar" }
lrlex = { path = "../grmtools/lrlex" }
lrpar = { path = "../grmtools/lrpar" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
